--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Organiser</title>
-    
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
+    <h1 class="title">Task Organiser</h1>
     <div class="box-container Engineering"></div>
     <div class="box-container Economics"></div>
     <div class="box-container Personal"></div>
