--- a/newtask.html
+++ b/newtask.html
@@ -9,15 +9,18 @@
 <body>
     <form>
         
-        <label for="taskname" >Task Name: </label>
-        <input type="text" name="taskname" id="taskname" placeholder="Enter Task Name">
-        <select placeholder="Task Type">
+        <label for="taskName" >Task Name: </label>
+        <input type="text" name="taskName" id="taskName" placeholder="Enter Task Name">
+        <select placeholder="Task Type" id="taskType" >
             <option>College</option>
             <option>Economics</option>
             <option>Engineering</option>
             <option>Personal</option>
             <option>Work</option>
         </select>
+
+        <label for="dueDate">Due Date: </label>
+        <input type="date">
     </form>
 </body>
 </html>
